--- a/src/App.css
+++ b/src/App.css
@@ -11,3 +11,8 @@
   font-family: "Montserrat", sans-serif;
   background-image: linear-gradient(190deg, #bee8f8 0%, #94cef5 100%);
 }
+
+.App .footer {
+  font-family: monospace;
+  text-align: center;
+}
