--- a/src/App.css
+++ b/src/App.css
@@ -2,14 +2,14 @@
   border: 1px solid black;
   border-radius: 10px;
   text-align: center;
-  max-width: 450px;
+  max-width: 520px;
   width: 80%;
   justify-content: space-evenly;
   flex-direction: column;
   padding: 20px 5px;
   margin: 10px auto;
   font-family: "Montserrat", sans-serif;
-  background-image: linear-gradient(190deg, #bee8f8 0%, #94cef5 100%);
+  background-image: linear-gradient(190deg, #7dc8f7 0%, #a3ddf5 100%);
 }
 
 .App .footer {
