--- a/src/Forecast.css
+++ b/src/Forecast.css
@@ -1,3 +1,13 @@
+.Forecast {
+  margin: 10px;
+}
 .Forecast .forecast-item {
-  margin: 5px;
+  margin: 0 auto;
+  border: 1px solid transparent;
+  border-radius: 10px;
+  background: transparent;
+  transition: all 200ms ease-in-out;
+}
+.forecast-item:hover {
+  background: #7dc8f7;
 }
